package ru.yandex.practicum.software_architecture.client_api.model;

public enum MessageType {

    GET_TEMPERATURE,
    READY_TO_GIVE_VIDEO;
}
