package ru.yandex.practicum.software_architecture.client_api.model;

public enum SensorType {
    GATE,
    LIGHTING_LAMP,
    TEMPERATURE,
    VIDEO_CAMERA;
}
